<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:layout_marginTop="100dp"
    android:padding="20dp"
    android:stretchColumns="*">

    <TableRow>
        <TextView
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/colorGood"
            android:textSize="40sp"
            android:id="@+id/about"
            android:gravity="center"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:textStyle="italic"
            android:textSize="20sp"
            android:text="@string/fullname"/>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hà Phùng Quang Vũ"
            android:textSize="20sp"
            android:id="@+id/fullname"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:textStyle="italic"
            android:textSize="20sp"
            android:text="@string/mssv"/>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1712205"
            android:textSize="20sp"
            android:layout_below="@+id/fullname"
            android:id="@+id/mssv"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:textStyle="italic"
            android:textSize="20sp"
            android:text="@string/email"/>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="quangvupp321@gmail.com"
            android:textSize="20sp"
            android:layout_below="@+id/mssv"
            android:id="@+id/email"
            />
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/bttOK"
            android:layout_span="2"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_header"
            android:text="@string/ok"
            android:textSize="25sp"
            />
    </TableRow>
</TableLayout>