<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAEDEDF1"
    tools:context=".AddActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">
        <Button
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:textColor="#7366FF"
            android:id="@+id/bttBack"
            android:layout_marginLeft="10dp"
            android:text="@string/back"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            />
        <Button
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:textColor="#7366FF"
            android:id="@+id/bttEdit"
            android:layout_marginRight="10dp"
            android:text="@string/edit"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            />
    </RelativeLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_header"
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/def_header"
        android:textColorHint="#DFDFDF"
        android:textSize="30sp"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:background="@drawable/custom_edittext"
        android:id="@+id/txtDate"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/def_date"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="italic"
        />
    <TextView
        android:background="@drawable/custom_edittext"
        android:id="@+id/txtTag"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/def_tag"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <TextView
        android:background="@drawable/custom_edittext"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/def_content"
        android:textSize="20sp"
        android:padding="10dp"
        />
</LinearLayout>