<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAEDEDF1"
    tools:context=".AddActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">
        <Button
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:textColor="#7366FF"
            android:id="@+id/bttCancel"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            />
        <Button
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:textColor="#7366FF"
            android:id="@+id/bttSave"
            android:layout_marginRight="10dp"
            android:text="@string/save"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            />
    </RelativeLayout>
    <EditText
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_header"
        android:id="@+id/edtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/header"
        android:textColorHint="#DFDFDF"
        android:textSize="30sp"
        android:maxLines="1"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFFFFF"
        />
    <EditText
        android:background="@drawable/custom_edittext"
        android:id="@+id/edtTag"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag"
        android:maxLines="1"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <EditText
        android:background="@drawable/custom_edittext"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/edtContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/content"
        android:textSize="20sp"
        android:padding="10dp"
        />
</LinearLayout>