<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewRow"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/custom_row"
         />
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/dot"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/def_header"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center_vertical"
            android:maxLength="16"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/def_date"
        android:layout_marginLeft="20dp"
        android:textSize="17sp"
        android:layout_below="@+id/header"
        android:textColor="#fff"
        />
    <TextView
        android:id="@+id/textViewTag"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/def_tag"
        android:layout_marginLeft="20dp"
        android:textSize="17sp"
        android:layout_below="@+id/textViewDate"
        android:textColor="#fff"
        android:maxLength="37"
        />

</RelativeLayout>